deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opensynccrdt
  labels:
    app.kubernetes.io/name: opensynccrdt
